# tellapic

./: Build.md  CMakeLists.txt  Makefile  Notes.md  ProjectHome.md  README.md  WhatsNot.md  WhatsThis.md  server.c  server.h  stream.c  stream.h
Modules/: Findpthread.cmake
bench/: tellapic.i
branches/seba-branch/swig/: CMakeLists.txt  tellapic.i
include/: common.h  common.h~  console.h  constants.h  list.h  server.h  stream.h  tellapic.h  types.h
src/: CMakeLists.txt  list.c  server.c  stream.c
src/lib/: CMakeLists.txt  tellapic.c  tellapic_common.c
src/lib/linux/: CMakeLists.txt  tellapic.c
src/lib/win32/: CMakeLists.txt  tellapic.c
src/server/: CMakeLists.txt  server.c
src/server/delayed/: common.c  server.c
src/swig/java/: CMakeLists.txt  module.i
src/swig/python/: CMakeLists.txt  configure_setup.py  module.i
swig/: CMakeLists.txt  tellapic.i
trunk/: CMakeLists.txt  Makefile  list.c  list.h  server.c  server.h  stream.c  stream.h
trunk/Modules/: FindJNI.cmake
trunk/bench/swig/: javatest.java  libtest.py  tellapic.py  tellapic_python.c
trunk/include/: common.h  console.h  console.h~  constants.h  constants.h~  list.h  server.h  stream.h  tellapic.h  types.h  types.h~
trunk/include/tellapic/: constants.h  tellapic.h  types.h
trunk/src/: CMakeLists.txt  list.c  server.c  stream.c
trunk/src/client/java/: .classpath  .project  exception-breakpoints.bkpt
trunk/src/client/java/src/: Words.properties
trunk/src/client/java/src/ar/com/tellapic/: AbstractUser.java  CheckBoxProvider.java  CustomPropertiesDialog.java  FavouritesTableModel.java  IUserManager.java  IUserManagerState.java  LocalUser.java  Main.java  MainDialog.java  MyEyeCheckBox.java  NetManager.java  ObjectMethodCompletion.java  ObjectOrientedLanguageCompletionProvider.java  ProgressDialog.java  ProgressMonitor.java  ReceiverThread.java  RemoteUser.java  SessionUtils.java  StatusBar.java  TellapicAbstractUser.java  TellapicConsoleModelController.java  TellapicLocalUser.java  TreePopupOptions.java  UserGUIBuilder.java  UserManager.java  UserOptionsController.java  UserPopupMenu.java  UserView.java  UsersView.java  UsersViewPopupOptions.java
trunk/src/client/java/src/ar/com/tellapic/adm/: AbstractUser.java
trunk/src/client/java/src/ar/com/tellapic/chat/: ChatClientModel.java  ChatController.java  ChatMessage.java  ChatMessagesView.java  ChatModelController.java  ChatUser.java  ChatUserManager.java  ChatView.java  ChatViewController.java  ChatViewTabComponent.java  ChatWindow.java  IChatConnection.java  IChatModelManager.java  IChatModelState.java  Main.java  Message.java
trunk/src/client/java/src/ar/com/tellapic/console/: ConsoleDialog.java  ConsoleModel.java  IConsoleCommand.java  IConsoleState.java  Main.java
trunk/src/client/java/src/ar/com/tellapic/graphics/: AbstractDrawing.java  ColorSelector.java  ControlPoint.java  ControlTool.java  ControlToolSelector.java  ControlToolSelectorNet.java  ControlToolZoom.java  CustomCellEditor.java  Drawing.java  DrawingAreaModel.java  DrawingAreaView.java  DrawingCellComponentProvider.java  DrawingLocalController.java  DrawingShape.java  DrawingShapeEllipse.java  DrawingShapeLine.java  DrawingShapePen.java  DrawingShapeRectangle.java  DrawingTableCellEditor.java  DrawingTableEditorFactory.java  DrawingText.java  DrawingTool.java  DrawingToolEllipse.java  DrawingToolEllipseNet.java  DrawingToolLine.java  DrawingToolLineNet.java  DrawingToolMarker.java  DrawingToolMarkerNet.java  DrawingToolPen.java  DrawingToolPenNet.java  DrawingToolRectangle.java  DrawingToolRectangleNet.java  DrawingToolText.java  DrawingToolTextNet.java  Ellipse.java  EllipseNet.java  EllipseTool.java  Grid.java  IColorSelectorController.java  IDrawingAreaManager.java  (+41 more)
trunk/src/client/java/src/ar/com/tellapic/utils/: JFontChooser.java  Utils.java
trunk/src/client/java/src/com/tellapic/: IUserManagerController.java  UserGUIBuilder.java  Utils.java
trunk/src/client/java/src/com/tellapic/chat/: ChatView.java  ChatViewTabComponent.java  IChatController.java  Message.java
trunk/src/client/java/src/com/tellapic/graphics/: AbstractDrawing.java  Drawing.java  DrawingAreaModel.java  DrawingAreaView.java  IPaintPropertyController.java  IToolBoxManager.java  PaintPropertyColor.java  PaintPropertyFont.java  PaintPropertyStroke.java  PaintPropertyView.java  Text.java  ToolBoxWindow.java
trunk/src/client/python/pyqt/: ChatTabContentWidget.py  ChatTabContentWidgetUi.py  CustomChatWidget.py  Drawing.py  DrawingPropertiesWidget.py  DrawingPropertiesWidgetUi.py  FontWidgetUi.py  MainWindow.py  StrokeStyleWidget.py  StrokeStyleWidgetUi.py  ToolBoxUi.py  TwoInits.py~  Utils.py  chatUi.ui  connectDialog.ui  main.py  mainWidget.py  networkStatus.ui  rsrc_rc.py  statusBarWidget.py
trunk/src/client/python/pyqt/plugins/: ChatWidgetplugin.py  DrawingPropertiesWidgetplugin.py  StrokeStyleWidgetplugin.py
trunk/src/client/python/pyqt/ui/: chatWidget.ui  customChatWidgetUi.ui  strokeStyleWidget.ui  toolBox.ui
trunk/src/client/python/pyqt/ui/stylesheets/ChatWidget/: QLineEdit.css
trunk/src/common/: common.c  console.c  list.c
trunk/src/lib/: CMakeLists.txt  tellapic.c  tellapic_common.c
trunk/src/lib/linux/: CMakeLists.txt  tellapic.c
trunk/src/lib/win32/: CMakeLists.txt  tellapic.c
trunk/src/server/: CMakeLists.txt  server.c
trunk/src/server/delayed/: server.c
trunk/src/swig/: tellapic.i
trunk/src/swig/java/: CMakeLists.txt  module.i
trunk/src/swig/python/: CMakeLists.txt  configure_setup.py  module.i  setup.py
trunk/swig/: tellapic.i
trunk/test/c/: CMakeLists.txt  client_using_pen.c
trunk/test/pyqt/: ABC.py~  ChatWidget.py  ColorWidgetplugin.py~  CustomChatWidgetPlugin.py~  CustomChatWidgetUi.py  Drawing.py  MainWindow.py  MainWindow.py~  NetManager.py  ToolBoxUi.py  ToolBoxUi.py~  ToolBoxWidget.py  Utils.py~  Widgets.py~  connectDialog.py  main.ui  main_test.py  newMainWidget.ui  pytellapic.img  rsrc.qrc  rsrc_rc.py  someTest.py  toolBox.ui
wiki/: Build.wiki  Contents.wiki  FAQ.wiki  Notas.wiki  Notes.wiki  Tellapic.wiki  WhatsNot.wiki  WhatsThis.wiki
(+268 files in other folders)
